pridana logika roznych roli uzivatelov